...
            padding: EdgeInsets.all(20),
            child: Column(
                mainAxisAlignment: MainAxisAlignment.start,
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
              const SizedBox(height: 20),
              const Text("Tipo de torneo:",
                  style: TorneosTextStyles.TITULO_VERDE),
              const SizedBox(height: 10.0),
              Row(children: [
                Expanded(
                    child: ListTile(
                  title: const Text('Liga'),
...
